--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="box">
         <h1>今天复习git代码管理工具</h1>
         <p>还耗费了我一点时间</p> 
+        <h2>很大一部分原因是因为网络的问题</h2>
     </div>
 </body>
 </html>
