修改了内容

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
+
 <body>
     <div class="box">
-        <h1>今天复习git代码管理工具</h1>
-        <p>还耗费了我一点时间</p> 
+        <div class="smalbox1">
+             固定宽
+        </div>
 
-        <h2>感觉时间过的好快啊</h2>
-        
+        <div class="smalbox2">
+            右边盒子自适应
+        </div>
 
-      
 
     </div>
 </body>
+
 </html>
