--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <div class="smalbox2">
             右边盒子自适应
         </div>
-
+        <div class="smalbox3">
+            三列自适应
+        </div>
 
     </div>
 </body>
